<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>f1t_sensor_kit_description</name>
  <version>0.0.0</version>
  <description>The f1t_sensor_kit_description package</description>

  <maintainer email="min@todo.todo">min</maintainer>
  <license>TODO: License declaration</license>

 <!-- <buildtool_depend>ament_cmake</buildtool_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>velodyne_description</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
